--- a/app/src/main/res/layout/image_list_fragment.xml
+++ b/app/src/main/res/layout/image_list_fragment.xml
@@ -5,19 +5,19 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.main.ImageListFragment">
+    tools:context=".ui.imagelist.ImageListFragment">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/image_list"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+        android:clipToPadding="false"
         android:orientation="vertical"
-        tools:listitem="@layout/image_list_item"
-        />
+        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:listitem="@layout/image_list_item" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
